--- a/style.css
+++ b/style.css
@@ -4,24 +4,23 @@
     font-family: arial;
 }
 
+label, input{
+    display: block;
+    line-height: 30px;
+    height: 30px;
+    outline: none;
+    font-size: 13px;
+    width: 95%;
+}
+
+
 #formulario{
-    border: 2px solid;
-    margin-top: 1px;
-    margin-left: 1px;
-    width: 30%;
-}
-
-.card-header{
-    text-align: center;
-}
-
-#label-nome,
-#label-telefone,
-#label-email{
-    margin-bottom: 10px;
+    width: 330px;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 60px;
     margin-top: 10px;
-    margin-left: 2px;
-
+    border: 2px solid;
 }
 
 #enviar{
@@ -32,18 +31,39 @@
     margin-top: 10px;
 }
 
-#formulario input{
-
-    margin: 8px 0;
-
-}
-
-
-#formulario2{
 #formulario{
-    border: 2px solid;
-    margin-top: 1px;
-    margin-left: 1px;
-    width: 60%;
+    width: 35%;
+
+    float: left;
 }
+
+h2{
+    text-align: center;
+}
+#direita{
+    width: 65%;
+    float: left;
+
+}
+
+
+table{
+    background-color: #696969;
+    width: 40%;
+    margin-top: 10px;
+
+
+}
+
+
+tr#titulo{
+    font-weight: bold;
+    background-color: #646464;
+    color: white;
+
+}
+
+tr#nomes {
+    padding: 0px 5px;
+    background-color:#D3D3D3;
 }
